--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,6 +14,7 @@
     margin-left: 15px;
 }
 .profile__note {
+    position: relative;
     margin-left: 15px;
 }
 .profile__notes-all *{
@@ -35,6 +36,13 @@
     font-family: "Roboto", sans-serif;
     font-size: 20px;
 }
+.profile__form-block {
+    display: none;
+}
+.profile__form.active {
+    display: block;
+}
+
 .profile__form * {
     display: block;
     width: 320px;
