--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,8 +5,8 @@
 // Variables
 @import 'variables';
 
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
+// // Bootstrap
+// @import '~bootstrap/scss/bootstrap';
 .profile {
     margin: 50px 0;
 }
@@ -15,7 +15,7 @@
 }
 .profile__note {
     position: relative;
-    margin-left: 15px;
+    margin: 30px 15px;
 }
 .profile__notes-all *{
     display: inline-block;
@@ -23,7 +23,7 @@
 }
 .profile__note-answer {
     position: relative;
-    margin: 30px 0 30px 60px;
+    margin: 10px 0 0 50px;
 }
 .profile__name {
     font-size: 28px;
@@ -35,6 +35,7 @@
 .profile__text {
     font-family: "Roboto", sans-serif;
     font-size: 20px;
+	margin: 10px 0px;
 }
 .profile__form-block {
     display: none;
@@ -42,7 +43,6 @@
 .profile__form.active {
     display: block;
 }
-
 .profile__form * {
     display: block;
     width: 320px;
@@ -50,12 +50,24 @@
 .profile__form-btn {
     border: none;
 }
+.profile__info {
+	display: flex;
+	flex-direction: column;
+}
+.profile__text {
+	margin-left: 30px;
+	max-width: 320px;
+}
 .profile__a, .profile__a:hover {
     text-decoration: none;
+}
+.profile__note-container {
+    position: relative;
 }
 .form__title {
     font-family: "Roboto", sans-serif;
     font-size: 26px;
+	font-weight: 600;
 }
 .form__delete-btn {
     font-size: 18px;
@@ -63,14 +75,33 @@
     background-color: transparent;
     border: none;
 }
-.profile__note-container {
-    position: relative;
-}
 .form__delete {
     position: absolute;
     left: -30px;
     top: 30px;
 }
 .profile__book-a {
-    color: black;
+	font-weight: 600;
+    color: rgba($color: #000000, $alpha: 1);
+	transition: all 0.5s ease 0s;
+}
+.profile__book-a:hover {
+	color: #000000;
+}
+.profile {
+	align-content: start;
+}
+a {
+	color: darkcyan;
+	text-decoration: none;
+}
+.library__button {
+	font-size: 18px;
+	background-color: white;
+	border: 1px solid black;
+	border-radius: 15px;
+	transition: all 0.5s ease 0s;
+}
+.library__button:hover {
+	background-color: cyan;
 }
