--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,8 +5,8 @@
 // Variables
 @import 'variables';
 
-// // Bootstrap
-// @import '~bootstrap/scss/bootstrap';
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
 .profile {
     margin: 50px 0;
 }
