--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -77,8 +77,8 @@
 }
 .form__delete {
     position: absolute;
-    left: -30px;
-    top: 30px;
+    right: 10px;
+    top: 10px;
 }
 .profile__book-a {
 	font-weight: 600;
@@ -104,4 +104,69 @@ a {
 }
 .library__button:hover {
 	background-color: cyan;
+}
+
+html {
+    font-size: 16px;
+}
+.media-body .author {
+    display: inline-block;
+    font-size: 1rem;
+    color: #fff;
+    font-weight: 700;
+    margin-left: 15px;
+
+}
+.media-body .metadata {
+    display: block;
+    color: #fff;
+    font-size: .8125rem;
+}
+.title-comments {
+    font-size: 1.4rem;
+    font-weight: bold;
+    line-height: 1.5rem;
+    color: rgba(0,0,0,.87);
+    margin-bottom: 1rem;
+    padding-bottom: .25rem;
+    border-bottom: 1px solid rgba(34,36,38,.15);
+}
+
+.media-left-img {
+    display: inline-block;
+    width: 47px;
+    border-radius: 15px;
+}
+
+.media {
+    position: relative;
+    margin-top:0;
+    padding: 0px 0px 20px 0px;
+}
+.media-top {
+    border: 2px #3495e3 solid;
+    border-radius: 20px;
+}
+
+.media-list:first-child {
+    margin-top: 30px;
+}
+
+.media-list {
+    padding-left: 10px !important;
+}
+
+.media-text {
+    margin-left: 15px;
+}
+
+.panel-heading {
+    padding: 10px 15px;
+}
+
+.panel-primary>.panel-heading {
+    color: #fff;
+    background-color: #3495e3;
+    border-color: #3495e3;
+    border-radius: 15px;
 }
